// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksTable actions handles bulkCancel requests 1`] = `
Array [
  Array [
    [Function],
  ],
  Array [
    "TASKS_TABLE",
  ],
  Array [
    [Function],
  ],
]
`;

exports[`TasksTable actions handles bulkCancel requests that are not cancellable 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Not all the selected tasks can be canceled",
          "type": "warning",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`TasksTable actions handles bulkResume requests that are not resumable 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Not all the selected tasks can be resumed",
          "type": "warning",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`TasksTable actions handles bulkResume requests that fail 1`] = `
Array [
  Array [
    Object {
      "type": "TASKS_RESUME_REQUEST",
    },
  ],
  Array [
    Object {
      "error": [Error: Network Error],
      "type": "TASKS_RESUME_FAILURE",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Cannot resume tasks at the moment Error: Network Error",
          "type": "error",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`TasksTable actions handles resumable bulkResume requests 1`] = `
Array [
  Array [
    Object {
      "type": "TASKS_RESUME_REQUEST",
    },
  ],
  Array [
    Object {
      "type": "TASKS_RESUME_SUCCESS",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "I am resumed Task execution was resumed",
          "type": "success",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "I am failed Task execution could not be resumed",
          "type": "error",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
  Array [
    "TASKS_TABLE",
  ],
  Array [
    [Function],
  ],
]
`;

exports[`TasksTable actions should cancelTask 1`] = `
Array [
  Array [
    [Function],
  ],
  Array [
    "TASKS_TABLE",
  ],
  Array [
    [Function],
  ],
]
`;

exports[`TasksTable actions should cancelTaskRequest and fail 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Trying to cancel \\"some-name\\" task",
          "type": "info",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "\\"some-name\\" Task cannot be cancelled at the moment.",
          "type": "error",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`TasksTable actions should cancelTaskRequest and succeed 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Trying to cancel \\"some-name\\" task",
          "type": "info",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "\\"some-name\\" Task cancelled",
          "type": "success",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`TasksTable actions should resumeTask 1`] = `
Array [
  Array [
    [Function],
  ],
  Array [
    "TASKS_TABLE",
  ],
  Array [
    [Function],
    undefined,
  ],
]
`;

exports[`TasksTable actions should resumeTaskRequest and fail 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Task \\"some-name\\" has to be resumable.",
          "type": "error",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`TasksTable actions should resumeTaskRequest and succeed 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "\\"some-name\\" Task execution was resumed",
          "type": "success",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;
